# datosII_proyectoII_image_recovery

./: .gitignore  Button.h  CMakeLists.txt  ColorInfo.cpp  ColorInfo.h  ImageHandler.cpp  ImageHandler.h  ImageInfo.cpp  ImageInfo.h  ImageLoader.cpp  ImageLoader.h  Individual.cpp  Individual.h  Population.cpp  Population.h  ScreenSetter.h  StrategyTest.cpp  StrategyTest.h  Textbox.h  XMLConfig.cpp  XMLConfig.h  imageButton.h  main.cpp
html/: _button_8h.html  _button_8h__dep__incl.map  _button_8h__dep__incl.md5  _button_8h__incl.map  _button_8h__incl.md5  _button_8h_source.html  _c_make_lists_8txt.html  _color_info_8cpp.html  _color_info_8cpp__incl.map  _color_info_8cpp__incl.md5  _color_info_8h.html  _color_info_8h__dep__incl.map  _color_info_8h__dep__incl.md5  _color_info_8h__incl.map  _color_info_8h__incl.md5  _color_info_8h_source.html  _image_handler_8cpp.html  _image_handler_8cpp__incl.map  _image_handler_8cpp__incl.md5  _image_handler_8h.html  _image_handler_8h__dep__incl.map  _image_handler_8h__dep__incl.md5  _image_handler_8h__incl.map  _image_handler_8h__incl.md5  _image_handler_8h_source.html  _image_info_8cpp.html  _image_info_8cpp__incl.map  _image_info_8cpp__incl.md5  _image_info_8h.html  _image_info_8h__dep__incl.map  _image_info_8h__dep__incl.md5  _image_info_8h__incl.map  _image_info_8h__incl.md5  _image_info_8h_source.html  _individual_8cpp.html  _individual_8cpp__incl.map  _individual_8cpp__incl.md5  _individual_8h.html  _individual_8h__dep__incl.map  _individual_8h__dep__incl.md5  (+68 more)
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  (+13 more)
